@@ -1,6 +1,7 @@
 package org.kendar.replayer.storage;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.apache.commons.io.FileUtils;
 import org.kendar.events.EventQueue;
 import org.kendar.replayer.Cache;
 import org.kendar.replayer.ReplayerState;
@@ -105,7 +106,7 @@ public class PactDataset implements BaseDataset {
             }
             var maps = new HashMap<Integer, ReplayerRow>();
 
-            var replayerResult = mapper.readValue(Files.readString(stringPath), ReplayerResult.class);
+            var replayerResult = mapper.readValue(FileUtils.readFileToString(stringPath.toFile(), "UTF-8"), ReplayerResult.class);
             for (var call : replayerResult.getStaticRequests()) {
                 maps.put(call.getId(), call);
             }
